# kokao-engine-v3

./: .gitignore  CITATION.cff  DATA_AVAILABILITY.md  LICENSE  PUBLICATION_READY.md  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: BENCHMARK_REPORT.md  FINAL_VALIDATION_REPORT.md  run_ucr_benchmark.py
docs/: ARCHITECTURE.md  BLOCK_DIAGRAM.md  CODE_DOCUMENTATION.md  FUNCTIONAL_DIAGRAM.md  MATHEMATICAL_FOUNDATION.md
docs/theory/: FORMULA_8_DERIVATION.md  IMPLEMENTATION_MAP.md  KOSYAKOV_THEORY_1999.md
examples/: advanced_usage.py  basic_usage.py
kokao/: __init__.py  main.py
kokao/config/: __init__.py
kokao/core/: __init__.py  etalon.py  learning.py  memory.py  voting.py
kokao/modules/: __init__.py  energy.py  rhythm.py  stochastic.py
tests/: TEST_REPORT.md  __init__.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_etalon.py  test_learning.py  test_main.py  test_memory.py  test_modules.py  test_voting.py
