[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kokao-engine"
version = "3.0.6"
description = "Biologically Plausible Cognitive Architecture based on Kosyakov's Theory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Vital Kalinouski", email = "newmathphys@gmail.com"},
    {name = "V. Ovseychik", email = "newmathphys@gmail.com"}
]
maintainers = [
    {name = "newmathphys", email = "newmathphys@gmail.com"}
]
keywords = [
    "machine-learning",
    "bio-inspired",
    "neural-networks",
    "ucr",
    "time-series",
    "kosyakov",
    "cognitive-architecture"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "mypy>=0.950",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
benchmarks = [
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/newmathphys/kokao-engine"
Documentation = "https://kokao-engine.readthedocs.io/"
Repository = "https://github.com/newmathphys/kokao-engine.git"
Issues = "https://github.com/newmathphys/kokao-engine/issues"
PyPI = "https://pypi.org/project/kokao-engine/"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=kokao --cov-report=term-missing"
